# project-x

./: .context.md  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml
app/: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.prod.yml  next.config.mjs  package-lock.json  (+4 more)
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  agent.md  backend-api-plan.md  pyproject.toml
backend/postman/: project-x-auth.postman_collection.json
backend/scripts/: validate_schema.py
backend/src/: app.py
backend/src/api/: router.py
backend/src/api/dependencies/: auth.py
backend/src/api/routes/: assets.py  auth.py  documents.py  health.py  nominees.py  profiles.py
backend/src/connectors/: postgres.py
backend/src/core/: auth_configs.py  config.py  logging.py  security.py  settings.py
backend/src/db/: session.py
backend/src/db/models/: __init__.py  account.py  asset.py  asset_detail.py  audit.py  auth.py  base.py  inactivity.py  nominee.py  profile.py
backend/src/schemas/: asset.py  auth.py  health.py  nominee.py  pagination.py  profile.py
backend/src/services/: asset_service.py  auth_service.py  document_storage.py  nominee_service.py  platform_service.py  profile_service.py  release_service.py  resource_access_service.py
backend/tests/: conftest.py  test_access_controls.py  test_assets.py  test_auth.py  test_documents.py  test_health.py  test_nominees.py  test_profiles.py  test_release_service.py  test_settings.py
backend/tests/fixtures/: mock_access_data.json
(+101 files in other folders)
