[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "project-x-api"
version = "0.1.0"
description = "Backend API for Project X."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "alembic>=1.14.1,<2.0.0",
  "asyncpg>=0.30.0,<1.0.0",
  "boto3>=1.37.0,<2.0.0",
  "fastapi>=0.115.11,<1.0.0",
  "greenlet>=3.1.1,<4.0.0",
  "pydantic-settings>=2.8.1,<3.0.0",
  "sqlalchemy>=2.0.39,<3.0.0",
  "uvicorn[standard]>=0.34.0,<1.0.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1,<1.0.0",
  "pytest>=8.3.5,<9.0.0",
  "pytest-asyncio>=0.25.3,<1.0.0",
  "ruff>=0.11.0,<1.0.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/core", "src/api", "src/db", "src/schemas", "src/services", "src/connectors"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.ruff.lint.isort]
known-first-party = ["core", "api", "db", "schemas", "services", "connectors"]

[tool.uv]
package = true
